# velocity

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/: FUNDING.yml
src/: main.rs
src/cache/: mod.rs  store.rs
src/cli/: mod.rs  output.rs
src/cli/commands/: add.rs  audit.rs  cache.rs  create.rs  doctor.rs  init.rs  install.rs  migrate.rs  mod.rs  remove.rs  run.rs  update.rs  upgrade.rs  workspace.rs
src/core/: config.rs  engine.rs  error.rs  lockfile.rs  mod.rs  package.rs
src/installer/: downloader.rs  extractor.rs  linker.rs  mod.rs
src/permissions/: mod.rs
src/registry/: client.rs  mod.rs  types.rs
src/resolver/: graph.rs  mod.rs  version.rs
src/security/: ecosystem.rs  integrity.rs  mod.rs  permissions.rs  sandbox.rs  supply_chain.rs
src/templates/: astro.rs  mod.rs  next.rs  react.rs  solid.rs  svelte.rs  vue.rs
src/utils/: mod.rs  performance.rs
src/workspace/: graph.rs  mod.rs
