[package]
name = "velocity"
version = "0.1.0"
edition = "2021"
authors = ["Velocity Contributors"]
description = "A next-generation frontend package manager - faster than pnpm, secure by default"
license = "MIT"
repository = "https://github.com/nicholaspalmer/velocity"
homepage = "https://github.com/nicholaspalmer/velocity"
readme = "README.md"
keywords = ["package-manager", "npm", "javascript", "nodejs", "cli"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
futures = "0.3"

# CLI
clap = { version = "4.4", features = ["derive", "env", "cargo"] }
clap_complete = "4.4"

# HTTP client
reqwest = { version = "0.11", features = ["json", "stream", "gzip", "brotli"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Crypto
sha2 = "0.10"
hex = "0.4"
base64 = "0.21"

# Compression
flate2 = "1.0"
tar = "0.4"

# File system
walkdir = "2.4"
tempfile = "3.9"
fs_extra = "1.3"
directories = "5.0"

# Utilities
thiserror = "1.0"
anyhow = "1.0"
semver = "1.0"
url = "2.5"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4"] }
regex = "1.10"
once_cell = "1.19"
parking_lot = "0.12"
dashmap = "5.5"
petgraph = "0.6"

# Terminal UI
indicatif = { version = "0.17", features = ["tokio"] }
console = "0.15"
dialoguer = "0.11"
colored = "2.1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Process
which = "6.0"

# Concurrent data structures
dashmap = "5.5"
once_cell = "1.19"

# Filesystem
glob = "0.3"
pathdiff = "0.2"

# Windows junctions
[target.'cfg(windows)'.dependencies]
junction = "1.0"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.9"
tokio-test = "0.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

[[bin]]
name = "velocity"
path = "src/main.rs"
